Update init.sh